<resources>
    <string name="app_name">Calc</string>
    <string name="main_name">Calculator</string>
    <string name="first_number">First number:</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="select_operation">Select operation</string>
    <string name="result">Result</string>
    <string name="clear_all">Clear all</string>
    <string name="please_enter_both_numbers">Please enter both numbers</string>
</resources>